<resources>
    <string name="app_name">MH Rise Armor Set Searcher</string>
    <string name="damascus_head">Damascus Helm</string>
    <string name="damascus_chest">Damascus Mail</string>
    <string name="damascus_arms">Damascus Vambraces</string>
    <string name="damascus_waist">Damascus Coil</string>
    <string name="damascus_legs">Damascus Greaves</string>
    <string name="ibushi_head">Ibushi\'s Helm</string>
    <string name="ibushi_breastplate">Ibushi\'s Breastplate</string>
    <string name="ibushi_pauldrons">Ibushi\'s Pauldrons</string>
    <string name="ibushi_fauld">Ibushi\'s Fauld</string>
    <string name="ibushi_foot">Ibushi\'s Foot</string>
    <string name="narwa_head">Narwa\'s Helm</string>
    <string name="narwa_breastplate">Narwa\'s Breastplate</string>
    <string name="narwa_pauldrons">Narwa\'s Pauldrons</string>
    <string name="narwa_fauld">Narwa\'s Fauld</string>
    <string name="narwa_foot">Narwa\'s Foot</string>
    <string name="kushala_head">Kushala Glare</string>
    <string name="kushala_chest">Kushala Cista</string>
    <string name="kushala_arms">Kushala Grip</string>
    <string name="kushala_waist">Kushala Cocoon</string>
    <string name="kushala_legs">Kushala Crus</string>
    <string name="mizuha_head">Mizuha Cap</string>
    <string name="mizuha_chest">Mizuha Guards</string>
    <string name="mizuha_arms">Mizuha Sleeves</string>
    <string name="mizuha_waist">Mizuha Sash</string>
    <string name="mizuha_legs">Mizuha Gaiters</string>
    <string name="kaiser_head">Kaiser Crown</string>
    <string name="kaiser_chest">Kaiser Mail</string>
    <string name="kaiser_arms">Kaiser Vambraces</string>
    <string name="kaiser_waist">Kaiser Coil</string>
    <string name="kaiser_legs">Kaiser Greaves</string>
    <string name="golden_head">Golden Headress</string>
    <string name="golden_chest">Golden Haori</string>
    <string name="golden_arms">Golden Kote</string>
    <string name="golden_waist">Golden Obi</string>
    <string name="golden_legs">Golden Hakama</string>
    <string name="valstrax_head">Valstrax Helm</string>
    <string name="valstrax_chest">Valstrax Mail</string>
    <string name="valstrax_arms">Valstrax Vambraces</string>
    <string name="valstrax_waist">Valstrax Coil</string>
    <string name="valstrax_legs">Valstrax Greaves</string>
    <string name="bazel_head">Bazelgeuse Helm</string>
    <string name="bazel_chest">Bazelgeuse Mail</string>
    <string name="bazel_arms">Bazelgeuse Braces</string>
    <string name="bazel_waist">Bazelgeuse Coil</string>
    <string name="bazel_legs">Bazelgeuse Greaves</string>
    <string name="flame_seal">Flame Seal</string>
    <string name="canynce_tail">Canyne Tail</string>
    <string name="aelucanth_head">Aelucanth Vertex S</string>
    <string name="aelucanth_chest">Aelucanth Thorax S</string>
    <string name="aelucanth_arms">Aelucanth Brachia S</string>
    <string name="aelucanth_waist">Aelucanth Elytra S</string>
    <string name="aelucanth_legs">Aelucanth Crura S</string>
    <string name="rhopessa_head">Rhopessa Vertex S</string>
    <string name="rhopessa_chest">Rhopessa Thorax S</string>
    <string name="rhopessa_arms">Rhopessa Brachia S</string>
    <string name="rhopessa_waist">Rhopessa Elytra S</string>
    <string name="rhopessa_legs">Rhopessa Crura S</string>
    <string name="jelly_head">Jelly Hat S</string>
    <string name="jelly_chest">Jelly Vest S</string>
    <string name="jelly_arms">Jelly Gloves S</string>
    <string name="jelly_waist">Jelly Coil S</string>
    <string name="jelly_legs">Jelly Boots S</string>
    <string name="rakna_head">Rakna Helm</string>
    <string name="rakna_chest">Rakna Mail</string>
    <string name="rakna_arms">Rakna Armguards</string>
    <string name="rakna_waist">Rakna Coil</string>
    <string name="rakna_legs">Rakna Greaves</string>
    <string name="goss_head">Goss Harag Helm S</string>
    <string name="goss_chest">Goss Harag Mail S</string>
    <string name="goss_arms">Goss Harag Braces S</string>
    <string name="goss_waist">Goss Harag Coil S</string>
    <string name="goss_legs">Goss Harag Greaves S</string>
    <string name="almudron_head">Almudron Helm S</string>
    <string name="almudron_chest">Almudron Mail S</string>
    <string name="almudron_arms">Almudron Vambraces S</string>
    <string name="almudron_waist">Almudron Coil S</string>
    <string name="almudron_legs">Almudron Greaves S</string>
    <string name="narga_head">Nargacuga Helm S</string>
    <string name="narga_chest">Nargacuga Mail S</string>
    <string name="narga_arms">Nargacuga Braces S</string>
    <string name="narga_waist">Nargacuga Coil S</string>
    <string name="narga_legs">Nargacuga Greaves S</string>
    <string name="rathalos_head">Rathalos Helm S</string>
    <string name="rathalos_chest">Rathalos Mail S</string>
    <string name="rathalos_arms">Rathalos Vambraces S</string>
    <string name="rathalos_waist">Rathalos Coil S</string>
    <string name="rathalos_legs">Rathalos Greaves</string>
    <string name="tigrex_head">Tigrex Helm S</string>
    <string name="tigrex_chest">Tigrex Mail S</string>
    <string name="tigrex_arms">Tigrex Vambraces S</string>
    <string name="tigrex_waist">Tigrex Coil S</string>
    <string name="tigrex_legs">Tigrex Greaves S</string>
    <string name="diablos_head">Diablos Helm S</string>
    <string name="diablos_chest">Diablos Mail S</string>
    <string name="diablos_arms">Diablos Vambraces S</string>
    <string name="diablos_waist">Diablos Coil S</string>
    <string name="diablos_legs">Diablos Greaves S</string>
    <string name="zinogre_head">Zinogre Helm S</string>
    <string name="zinogre_chest">Zinogre Mail S</string>
    <string name="zinogre_arms">Zinogre Vambraces S</string>
    <string name="zinogre_waist">Zinogre Coil S</string>
    <string name="zinogre_legs">Zinogre Greaves S</string>
    <string name="anja_head">Anjanath Helm S</string>
    <string name="anja_chest">Anjanath Mail S</string>
    <string name="anja_arms">Anjanath Vambraces S</string>
    <string name="anja_waist">Anjanath Coil S</string>
    <string name="anja_legs">Anjanath Greaves S</string>
    <string name="sinister_head">Sinister Helm S</string>
    <string name="sinister_chest">Sinister Mail S</string>
    <string name="sinister_arms">Sinister Vambraces S</string>
    <string name="sinister_waist">Sinister Coil S</string>
    <string name="sinister_legs">Sinister Greaves S</string>
    <string name="mizu_head">Mizutsune Helm S</string>
    <string name="mizu_chest">Mizutsune Mail S</string>
    <string name="mizu_arms">Mizutsune Vambraces S</string>
    <string name="mizu_waist">Mizutsune Coil S</string>
    <string name="mizu_legs">Mizutsune Greaves S</string>
    <string name="brigade_head">Brigade Helm S</string>
    <string name="brigade_chest">Brigade Mai Sl</string>
    <string name="brigade_arms">Brigade Vambraces S</string>
    <string name="brigade_waist">Brigade Coil S</string>
    <string name="brigade_legs">Brigade Greaves S</string>
    <string name="gargwa_mask">Gargwa Mask S</string>
    <string name="cunning_specs">Cunning Specs</string>
    <string name="might_bow_feather">Mighty Bow Feather</string>
    <string name="black_leather_legs">Black Leather Legs</string>
    <string name="dober_head">Dober Helm</string>
    <string name="dober_chest">Dober Mail</string>
    <string name="dober_arms">Dober Vambraces</string>
    <string name="dober_waist">Dober Coil</string>
    <string name="dober_legs">Dober Greaves</string>
    <string name="melahoa_head">Melahoa Hat S</string>
    <string name="melahoa_chest">Melahoa Jacket S</string>
    <string name="melahoa_arms">Melahoa Branch S</string>
    <string name="melahoa_waist">Melahoa Folia S</string>
    <string name="melahoa_legs">Melahoa Roots S</string>
    <string name="makluva_head">Makluva Hood S</string>
    <string name="makluva_chest">Makluva Cover S</string>
    <string name="makluva_arms">Makluva Sleeves S</string>
    <string name="makluva_waist">Makluva Coil S</string>
    <string name="makluva_legs">Makluva Plants S</string>
    <string name="death_stench_head">Death Stench Brain S</string>
    <string name="death_stench_chest">Death Stench Muscle S</string>
    <string name="death_stench_arms">Death Stench Grip S</string>
    <string name="death_stench_waist">Death Stench Bowels S</string>
    <string name="death_stench_legs">Death Stench Heel S</string>
    <string name="mosgharl_head">Mosgharl Vizor S</string>
    <string name="mosgharl_chest">Mosgharl Ribplate S</string>
    <string name="mosgharl_arms">Mosgharl Creeper S</string>
    <string name="mosgharl_waist">Mosgharl Folia S</string>
    <string name="mosgharl_legs">Mosgharl Roots S</string>
    <string name="vaik_head">Vaik Helm S</string>
    <string name="vaik_chest">Vaik Mail S</string>
    <string name="vaik_arms">Vaik Braces S</string>
    <string name="vaik_waist">Vaik Coil S</string>
    <string name="vaik_legs">Vaik Greaves S</string>
    <string name="utsushi_v_head">Utushi Mask (V) S</string>
    <string name="utsushi_v_chest">Utushi Chest (V) S</string>
    <string name="utsushi_v_arms">Utushi Braces (V) S</string>
    <string name="utsushi_v_waist">Utushi Tassets (V) S</string>
    <string name="utsushi_v_legs">Utushi Greaves (V) S</string>
    <string name="channeler_head">Channeler\'s Hair-tie S</string>
    <string name="channeler_chest">Channeler\'s Robe S</string>
    <string name="channeler_arms">Channeler\'s Hope S</string>
    <string name="channeler_waist">Channeler\'s Obi S</string>
    <string name="channeler_legs">Channeler\'s Hakma S</string>
    <string name="utsushi_h_head">Utushi Mask (H) S</string>
    <string name="utsushi_h_chest">Utushi Chest (H) S</string>
    <string name="utsushi_h_arms">Utushi Braces (H) S</string>
    <string name="utsushi_h_waist">Utushi Tassets (H) S</string>
    <string name="utsushi_h_legs">Utushi Greaves (H) S</string>
    <string name="medium_head">Medium\'s Hair-tie S</string>
    <string name="medium_chest">Medium\'s Robe S</string>
    <string name="medium_arms">Medium\'s Hope S</string>
    <string name="medium_waist">Medium\'s Obi S</string>
    <string name="medium_legs">Medium\'s Hakma S</string>
    <string name="studded_head">S. Studded Hat S</string>
    <string name="studded_chest">S. Studded Vest S</string>
    <string name="studded_arms">S. Studded Gloves S</string>
    <string name="studded_waist">S. Studded Sash S</string>
    <string name="studded_legs">S. Studded Sandals S</string>
    <string name="bishaten_head">Bishaten Helm S</string>
    <string name="fire_res">Fire Res Jewel 1</string>
    <string name="water_res">Water Res Jewel 1</string>
    <string name="thunder_res">Thunder Res Jewel 1</string>
    <string name="dragon_res">Dragon Res Jewel 1</string>
    <string name="ice_atk">Ice Attack</string>
    <string name="fire_res_skill">Fire Resistance</string>
    <string name="water_res_skill">Water Resistance</string>
    <string name="thunder_res_skill">Thunder Reistance</string>
    <string name="ice_res_skill">Ice Resistance</string>
    <string name="dragon_res_skill">Dragon Resistance</string>
    <string name="helmet">Helmet</string>
    <string name="chest">Chest</string>
    <string name="arms">Arms</string>
    <string name="waist">Waist</string>
    <string name="legs">Legs</string>
    <string name="placeholder">Placeholder</string>
    <string name="defense_text">Defense</string>
    <string name="placeholder_number">2</string>
    <string name="level_1_slots">Level 1 Slots:</string>
    <string name="level_2_slots">Level 2 Slots:</string>
    <string name="level_3_slots">Level 3 Slots:</string>
    <string name="skills">Skills:</string>
    <string name="skill_description">Skill Description</string>
    <string name="save_set">Save Set</string>
    <string name="delete_set">Delete Set</string>
    <string name="charm">Charm</string>
</resources>