<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/item_card_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:contentDescription="@string/helmet"
                app:srcCompat="@drawable/armor_part_0" />

            <TextView
                android:id="@+id/helmet_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/placeholder"
                android:textAlignment="gravity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:contentDescription="@string/chest"
                app:srcCompat="@drawable/armor_part_1" />

            <TextView
                android:id="@+id/chest_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/placeholder"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:contentDescription="@string/arms"
                app:srcCompat="@drawable/armor_part_2" />

            <TextView
                android:id="@+id/arms_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/placeholder"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:contentDescription="@string/waist"
                app:srcCompat="@drawable/armor_part_3" />

            <TextView
                android:id="@+id/waist_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/placeholder"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:contentDescription="@string/legs"
                app:srcCompat="@drawable/armor_part_4" />

            <TextView
                android:id="@+id/legs_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/placeholder"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_1_slots" />

            <TextView
                android:id="@+id/level_1_slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder_number" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_2_slots" />

            <TextView
                android:id="@+id/level_2_slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder_number" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level_3_slots" />

            <TextView
                android:id="@+id/level_3_slots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder_number" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/total_skill_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/skills_list_item" />

    </LinearLayout>

</androidx.cardview.widget.CardView>