<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/charm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/charm"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skill_1_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:layout_constraintWidth_percent=".6" />

    <TextView
        android:id="@+id/skill_1_level"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/placeholder_number"
        app:layout_constraintBottom_toBottomOf="@+id/skill_1_name"
        app:layout_constraintStart_toEndOf="@+id/skill_1_name"
        app:layout_constraintTop_toTopOf="@+id/skill_1_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/skill_2_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_1_name"
        app:layout_constraintWidth_percent=".6" />

    <TextView
        android:id="@+id/skill_2_level"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/placeholder_number"
        app:layout_constraintBottom_toBottomOf="@+id/skill_2_name"
        app:layout_constraintStart_toEndOf="@+id/skill_2_name"
        app:layout_constraintTop_toTopOf="@+id/skill_2_name" />
</androidx.constraintlayout.widget.ConstraintLayout>